<resources>
    <string name="app_name">E Loan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_agent">Add Agent</string>
    <string name="agent_name">Agent Name</string>
    <string name="enter_agent_name">Enter agent name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="save_details">Save Details</string>
    <string name="add_customer">Add Customer</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="card_number">Card Number</string>
    <string name="enter_card_name">Enter Card Name</string>
    <string name="joining_date">Joining Date</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="add_loan">Add Loan</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="enter_loan_amount">Enter loan amount</string>
    <string name="interest">Interest</string>
    <string name="enter_interest">Enter Interest</string>
    <string name="due_amount">Due Amount</string>
    <string name="enter_due_amount">Enter due amount</string>
    <string name="no_of_dues">No. of Dues</string>
    <string name="enter_no_of_due">Enter no. of due</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit">Submit</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="enter_customer_number">Enter customer number</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="no_data_found">No data found</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="agent_profile">Agent Profile</string>
    <string name="total_collected">Total Collected</string>
    <string name="total_count">Total Count</string>
    <string name="status">Status :</string>
    <string name="enable_agent">Enable Agent</string>
    <string name="disable_agent">Disable Agent</string>
    <string name="mark_as_collected">Mark as collected</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="close_saving">Close Saving</string>
    <string name="loan_number">Loan Number</string>
    <string name="interest_amount">Interest Amount</string>
    <string name="saving_amount">Saving Amount</string>
    <string name="saving">Saving</string>
    <string name="loan">Loan</string>
    <string name="no_savings_found">No Savings Found</string>
    <string name="no_loans_found">No Loans Found</string>
    <string name="add_savings">Add Savings</string>
    <string name="add_loans">Add Loans</string>
    <string name="expense_list">Expense List</string>
    <string name="add_expense">Add Expense</string>
    <string name="loans">Loans</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="login">Login</string>
    <string name="savings">Savings</string>
    <string name="savings_amount">Savings Amount</string>
    <string name="enter_savings_amount">Enter Savings Amount</string>
    <string name="maturity_amount">Maturity Amount</string>
    <string name="enter_maturity_amount">Enter Maturity Amount</string>
    <string name="transaction_history">Transaction History</string>
    <string name="current_interest">Current Interest</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="close">Close</string>
    <string name="total_loan">Total Loan</string>
    <string name="total">Total</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="expense_name">Expense Name</string>
    <string name="enter_expense_name">Enter Expense Name</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="enter_expense_amount">Enter Expense Amount</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close_all_loan">Close All Loan</string>
    <string name="logout">Logout</string>
    <string name="manage_your_income">Manage Your Income</string>
    <string name="to_be_settled">To Be Settled</string>
    <string name="find_customer">Find Customer</string>
    <string name="customer_number">Customer Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_loan_no">Enter Loan No</string>
    <string name="search">Search</string>
    <string name="total_interest">Total interest</string>
    <string name="expense">Expense</string>
    <string name="customers">Customers</string>
    <string name="cash_in_hand">Cash in hand</string>
    <string name="collecting_agent">Collecting Agent</string>
    <string name="download_pdf">Download PDF</string>
    <string name="language">Language</string>
    <string name="Confirmation">Confirmation</string>
    <string name="close_loan_conf">Are you sure you want close all Loans?</string>
    <string name="logout_conf">Are you sure you want to logout?</string>
    <string name="Customer_List">Customer List</string>
    <string name="Agent_List">Agent List</string>
    <string name="ar_close_savings">Are you sure you want to close the savings?</string>
    <string name="ar_delete_account">Are you sure you want to delete this account?</string>
    <string name="ar_delete">Are you sure you want to delete?</string>
    <string name="ar_collect_amt">Are you sure you collected amount?</string>
</resources>