<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@drawable/background"
    android:backgroundTint="#EFF4FE"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.8"
                    android:text="@string/expense_name"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_shape"
                    android:backgroundTint="#ffffff"
                    android:hint="@string/enter_expense_name"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.8"
                    android:text="@string/expense_amount"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtSavAmt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_shape"
                    android:backgroundTint="#ffffff"
                    android:hint="@string/enter_expense_amount"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_shape"
                    android:backgroundTint="#ffffff"
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_shape"
                    android:backgroundTint="#ffffff"
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/time"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="@color/green"
            android:paddingHorizontal="30dp"
            android:paddingVertical="8dp"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>